Revert "small changes made. Tryin to fix cursor not showing."
This reverts commit de6b0ebd97adb00568aac476bf90a5b7ac4af889.

--- a/app/globals.css
+++ b/app/globals.css
@@ -13,6 +13,7 @@
   color: #a9a9a9;
 } */
 
+
 @layer base {
   body {
     @apply cursor-custom-default;
@@ -27,28 +28,31 @@
   }
 
   .cursor-custom-card {
-    cursor: url('/daniely/cursor/default.svg'), pointer;
+    cursor: url('/cursor/default.svg'), pointer;
   }
 
   .cursor-custom-default {
-    cursor: url('/daniely/cursor/default.svg'), auto;
+    cursor: url('/cursor/default.svg'), auto;
   }
 
   .cursor-custom-text {
-    cursor: url('/daniely/cursor/text.svg'), text;
+    cursor: url('/cursor/text.svg'), text;
   }
 
   .cursor-custom-link {
-    cursor: url('/daniely/cursor/link.svg'), pointer;
+    cursor: url('/cursor/link.svg'), pointer;
   }
 }
 
+
+
+
 ::-webkit-scrollbar {
-  width: 12px;
+  width: 12px; 
 }
 
 ::-webkit-scrollbar-track {
-  background: #f4f4f5;
+  background: #f4f4f5; 
   border-radius: 6px;
 }
 
@@ -59,5 +63,5 @@
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #4b5563;
+  background-color: #4b5563; 
 }
